--- a/app/views/layouts/merchants_portal/_footer.html.haml
+++ b/app/views/layouts/merchants_portal/_footer.html.haml
@@ -1,7 +1,7 @@
 .vb__footer
   .vb__footer__inner
     %a.vb__footer__logo{:href => "https://visualbuilder.cloud", :rel => "noopener noreferrer", :target => "_blank"}
-      %strong{:classname => "mr-2"} Soko
+      %strong.me-2 Soko
     %br/
     %p.mb-0
       Copyright ©
