--- a/app/views/layouts/merchants_portal/_menu_left.html.haml
+++ b/app/views/layouts/merchants_portal/_menu_left.html.haml
@@ -5,7 +5,6 @@
   .vb__menuLeft__outer
     .vb__menuLeft__logo__container
       .vb__menuLeft__logo
-        %svg{:height => "24px", :version => "1.1", :viewBox => "0 0 24 24", :width => "24px"}
         .vb__menuLeft__logo__name Soko
         .vb__menuLeft__logo__descr Home for Merchants
     .vb__menuLeft__scroll.vb__customScroll
@@ -15,7 +14,7 @@
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Sales Orders
-            %span.badge.badge-success.ml-2 4
+            %span.badge.bg-success.ms-2 4
             %i.vb__menuLeft__item__icon.fa.fa-cart-arrow-down
           %ul.vb__menuLeft__navigation
             %li.vb__menuLeft__item
@@ -49,7 +48,7 @@
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Customers
-            %i.vb__menuLeft__item__icon.fa.fa-user-o
+            %i.vb__menuLeft__item__icon.fa.fa-user-tag
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Marketing
@@ -58,6 +57,9 @@
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Discounts
             %i.vb__menuLeft__item__icon.fa.fa-percent
+        
+        %li
+          %hr
 
 
         %li.vb__menuLeft__category
@@ -65,7 +67,7 @@
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Purchase Orders
-            %span.badge.badge-success.ml-2 1
+            %span.badge.bg-success.ms-2 1
             %i.vb__menuLeft__item__icon.fa.fa-shopping-cart
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
@@ -76,21 +78,28 @@
             %span.vb__menuLeft__item__title Bill of Materials
             %i.vb__menuLeft__item__icon.fa.fa-bookmark
 
+      
+        %li
+          %hr
+
 
         %li.vb__menuLeft__category
           Teams
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title All Members
-            %i.vb__menuLeft__item__icon.fa.fa-user-o
+            %i.vb__menuLeft__item__icon.far.fa-user
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Sales
-            %i.vb__menuLeft__item__icon.fa.fa-user-o
+            %i.vb__menuLeft__item__icon.far.fa-user
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Operations
-            %i.vb__menuLeft__item__icon.fa.fa-user-o
+            %i.vb__menuLeft__item__icon.far.fa-user
+
+        %li
+          %hr
 
 
         %li.vb__menuLeft__category
