fix: Reorganized app/assets_webpack folder structure. Added initial scss for perfect-scrollbar.

--- a/app/views/layouts/merchants_portal/_menu_left.html.haml
+++ b/app/views/layouts/merchants_portal/_menu_left.html.haml
@@ -7,7 +7,7 @@
       .vb__menuLeft__logo
         .vb__menuLeft__logo__name Soko
         .vb__menuLeft__logo__descr Home for Merchants
-    .vb__menuLeft__scroll.vb__customScroll
+    .vb__menuLeft__scroll.vb__customScroll{ "data-scroll-bar": true }
       %ul.vb__menuLeft__navigation
         %li.vb__menuLeft__category
           Sales Management
@@ -107,7 +107,7 @@
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Pages
-            %i.vb__menuLeft__item__icon.fa.fa-file-text-o
+            %i.vb__menuLeft__item__icon.fa.fa-rss
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Navigation
