--- a/app/assets_webpack/src/stylesheets/application.scss
+++ b/app/assets_webpack/src/stylesheets/application.scss
@@ -1,12 +1,17 @@
 
-// // Vendor libraries
+// Vendor libraries
 @import "bootstrap";
 @import "@fortawesome/fontawesome-free";
+@import "../../vendor/stylesheets/perfect-scrollbar";
+
+
 
 // Rails defaults
 @import "actiontext";
 
 
-@import "common";
+
+// Source Files
+@import "global";
 @import "merchants_portal/home";
 @import "merchants_portal/products";
