--- a/app/views/layouts/merchants_portal/_menu_left.html.haml
+++ b/app/views/layouts/merchants_portal/_menu_left.html.haml
@@ -68,11 +68,11 @@
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Purchase Orders
             %span.badge.bg-success.ms-2 1
-            %i.vb__menuLeft__item__icon.fa.fa-shopping-cart
+            %i.vb__menuLeft__item__icon.fa.fa-cart-plus
         %li.vb__menuLeft__item.vb__menuLeft__submenu
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Suppliers
-            %i.vb__menuLeft__item__icon.fa.fa-users
+            %i.vb__menuLeft__item__icon.fa.fa-people-carry
         %li.vb__menuLeft__item.vb__menuLeft__item--disabled
           %span.vb__menuLeft__item__link
             %span.vb__menuLeft__item__title Bill of Materials
