fix: Added breadcrumbs_on_rails gem. Added CustomBuilder for breadcrumbs_on_rails.

--- a/app/views/layouts/merchants_portal/_breadcrumbs.html.haml
+++ b/app/views/layouts/merchants_portal/_breadcrumbs.html.haml
@@ -1,9 +1,3 @@
 .vb__breadcrumbs
   .vb__breadcrumbs__path
-    %a{:href => "javascript: void(0);"} Home
-    %span
-      %span.vb__breadcrumbs__arrow
-      %span Soko
-    %span
-      %span.vb__breadcrumbs__arrow
-      %strong.vb__breadcrumbs__current Welcome to Soko
+    = render_breadcrumbs builder: GemExtensions::BreadcrumbsOnRails::CustomBuilder
